Fixed calendar dark mode colors

--- a/project/src/styles/globals.css
+++ b/project/src/styles/globals.css
@@ -32,7 +32,7 @@
 
 .dark {
   --color-primary-default: #849afd;
-  --color-secondary-variant: #afbeff;
+  --color-primary-variant: #afbeff;
   --color-primary-highlight: #2d385c;
 
   --color-secondary-default: #3a3a39;
